add new image flag and edit centered text plus height of logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul id="menu">
             <li>
-                <a href="signup.html"class="active">Join the adventure!</a>
+                <a href="signup.html" class="active">Join the adventure!</a>
             </li>
             
             <li>
@@ -30,9 +30,9 @@
     </nav>
 
 </header>
-<section id="scouts-outer">
-    <div id="scouts-image"></div>
-    <div id="centered-text"><h1>Ballinteer Scouts</h1><h2>Expect the unexpected!</h2></div>
+<section id="flag-outer">
+    <div id="flag-image" title="Image of Ballinteer flag"></div>
+    <div id="centered-text"><h1>115<sup>th</sup> Ballinteer</h1><h2>Expect the unexpected!</h2></div>
 </section>
 <section>
     <div>Why get involved</div>
