--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     <div id="centered-text"><h1>115<sup>th</sup> Ballinteer</h1><h2>Expect the unexpected!</h2></div>
 </section>
 <section>
-    <div>Why get involved</div>
+    <div><h1>Why get involved?</h1><p>Lorem Ipsum is simply dummy text of the printing and typesetting 
+        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+        It has survived not only five centuries, but also the leap into electronic typesetting,
+         remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+           software like Aldus PageMaker including versions of Lorem Ipsum </p></div>
 </section>
 <section>
     <div>Activites</div>
