add es changes to form spacing left plus edit image to have blur effect

--- a/signup.html
+++ b/signup.html
@@ -39,17 +39,21 @@
             <input id="fname" class="text-input" type="text" name="first_name" required />
             <label for="lname">Last Name</label>
             <input id="lname" class="text-input" type="text"  name="last_name" required />
+            <label for="birthday">Childs Date of birth</label>
+            <input id="birthday" type="date" id="birthday" name="birthday" class="text-input" >
             <label for="email">Email Address</label>
             <input id="email" class="text-input" type="email" name="email_address" required/>
             <label for="phone">Mobile Number</label>
-            <input id="phone" class="text-input" type="tel" name="phone" required/>
-            <label for="road">Road</label>
-            <input id="road" type="radio" name ="running_preference" value="road" required/>
-            <label for="trail">Trail</label>
-            <input id="trail" type="radio" name="running_preference" value="trail"/>
-            <label for="both">Both</label>
-            <input id="both" type="radio" name="running_preference" value="both"/>
-            <input class="join-button"  type="submit" value="Let's Run!"/>
+            <input id="phone" class="text-input" type="tel" name="phone_number" required/>
+            <label for="beavers">Beavers </label>
+            <input id="beavers" type="radio" name ="scouting_preference" value="beavers" required/>
+            <label for="cubs">Cubs </label>
+            <input id="cubs" type="radio" name="scouting_preference" value="cubs"/>
+            <label for="scouts">Scouts </label>
+            <input id="scouts" type="radio" name="scouting_preference" value="scouts"/>
+            <label for="ventures">Ventures </label>
+            <input id="ventures" type="radio" name="scouting_preference" value="ventures"/>
+            <input class="join-button"  type="submit" value="Join the fun!"/>
             
         </form>
  </section> 
