add childs name entry box for form page

--- a/signup.html
+++ b/signup.html
@@ -39,8 +39,10 @@
             <input id="fname" class="text-input" type="text" name="first_name" required />
             <label for="lname">Last Name</label>
             <input id="lname" class="text-input" type="text"  name="last_name" required />
+            <label for="childname">Childs name</label>
+            <input id="childname" class="text-input" type="text"  name="child_name" required />
             <label for="birthday">Childs Date of birth</label>
-            <input id="birthday" type="date" id="birthday" name="birthday" class="text-input" >
+            <input id="birthday" type="date" id="birthday" name="birthday" class="text-input">
             <label for="email">Email Address</label>
             <input id="email" class="text-input" type="email" name="email_address" required/>
             <label for="phone">Mobile Number</label>
