error 404 landing page permalink

--- a/404.html
+++ b/404.html
@@ -54,5 +54,6 @@
         </div>
         
         </footer>
+        <script src="https://kit.fontawesome.com/f725a3c610.js" crossorigin="anonymous"></script>
 </body>
 </html>
