burger style menu hmtl added

--- a/findus.html
+++ b/findus.html
@@ -17,7 +17,12 @@
         </a>
         
         <nav>
-            <ul id="menu">
+            <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fa-solid fa-bars"></i>
+            <span class="visually-hidden">This is for the responsive menu</span>
+        </label>
+        <ul class="nav-links">
                 <li>
                     <a href="signup.html" class="active">Join the adventure!</a>
                 </li>
