--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Ballinteer scouts webpage for parents and kids to find more information about our scout group">
+    <meta name="keywords" content="cubs, ballinteer, scouts, scouting ireland, dublin, ireland, beavers, ventures">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/images/BallinteerFlag.jpg">
     
@@ -17,8 +20,12 @@
     </a>
 
     <nav>
-        
-        <ul id="menu">
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fa-solid fa-bars"></i>
+            <span class="visually-hidden">This is for the responsive menu</span>
+        </label>
+        <ul class="nav-links">
             <li>
                 <a href="signup.html" class="active">Join the adventure!</a>
             </li>
