contrast error on address on find us page

--- a/findus.html
+++ b/findus.html
@@ -42,7 +42,7 @@
     <section id="flag-outer">
     <section id="map">
         <h2>Come on up for a chat and meet the leaders!</h2>
-        <div>
+        <div class="address-color">
             
             <h5>Address</h5>
             
