contrast error change and heading for address

--- a/findus.html
+++ b/findus.html
@@ -44,7 +44,7 @@
         <h2>Come on up for a chat and meet the leaders!</h2>
         <div class="address-color">
             
-            <h5>Address</h5>
+            <h2>Address:</h2>
             
             <p>
                 BALLINTEER SCOUT'S DEN<br>
